# study_google_identity

./: .dockerignore  Cargo.toml  Dockerfile  README.md  cloudbuild.yaml
.github/workflows/: general.yml
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/auth/: cache.rs  claim.rs  google.rs  mod.rs
src/route/: login.rs  mod.rs  secret.rs
tests/app/: health_check.rs  helper.rs  main.rs  secret.rs
tools/: .gitignore  gen_random.sh  run_docker.sh  watch.sh
