[package]
name = "study_google_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.htm

[dependencies]
actix-web = "4.0.0-beta.8"
anyhow = "1.0.48"
config = "0.11.0"
reqwest = "0.11.6"
thiserror = "1.0.30"

[dev-dependencies]
actix-rt = "2"
