[package]
name = "study_google_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.htm

[dependencies]
actix-web = "4.0.0-beta.8"
anyhow = "1.0.48"
jsonwebtoken = "7.2.0"
once_cell = "1.8.0"
reqwest = { version = "0.11.6", features = ["cookies", "json"] }
serde = "1.0.130"
thiserror = "1.0.30"
tokio = { version = "1.14" }

[dev-dependencies]
actix-rt = "2"
